--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "element-plus": "^2.11.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
