--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-vue": "^7.3.0",
     "axios": "^1.13.2",
+    "ckeditor5": "^47.2.0",
     "element-plus": "^2.11.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
